[package]
name = "task-maker-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
task-maker-rpc-macro = { path = "../task-maker-rpc-macro" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
